add notification to delete
